--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -68,8 +68,11 @@
     <color name="color_111111">#111111</color>
     <color name="color_price">#F1A942</color>
     <color name="color_f0f2f5">#f0f2f5</color>
+    <color name="common_backgroud">#f0f2f5</color>
     <color name="color_e4e4e2">#e4e4e2</color>
+    <color name="cutline">#e4e4e2</color>
     <color name="color_f1a942">#f1a942</color>
     <color name="color_f0f1f5">#f0f1f5</color>
+
 
 </resources>
