--- a/app/src/main/res/layout/fragment_baseinfo.xml
+++ b/app/src/main/res/layout/fragment_baseinfo.xml
@@ -6,71 +6,183 @@
     android:background="@color/color_f0f2f5"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:layout_marginLeft="15dp"
-        android:text="@string/base_info"
-        android:layout_marginBottom="10dp"
-        android:textAppearance="@style/TextAppear.Theme.111111_Size14"/>
 
-    <LinearLayout
-        android:paddingLeft="15dp"
+    <ScrollView
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:background="@color/white"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:scrollbars="none">
 
-        <com.bb.taold.widget.Line_ItemView
-            android:paddingRight="15dp"
-            android:id="@+id/item_edu"
-            app:left_name="@string/edu"
-            app:hint="@string/edu_hint"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <include layout="@layout/line_e" />
-
-        <com.bb.taold.widget.Line_ItemView
-            android:paddingRight="15dp"
-            android:id="@+id/item_address"
-            app:left_name="@string/address"
-            app:hint="@string/address_hint"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="3dp"
+                android:text="@string/base_info"
+                android:textAppearance="@style/TextAppear.Theme.111111_Size14" />
 
-    <LinearLayout
-        android:layout_marginTop="10dp"
-        android:paddingLeft="15dp"
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:background="@color/white"
-        android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:paddingLeft="15dp">
 
-        <com.bb.taold.widget.Line_ItemView
-            android:paddingRight="15dp"
-            android:id="@+id/tv_company_name"
-            app:left_name="@string/company_name"
-            app:hint="@string/company_name_hint"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <include layout="@layout/line_e" />
+                <com.bb.taold.widget.Line_ItemView
+                    android:id="@+id/item_edu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="15dp"
+                    app:hint="@string/edu_hint"
+                    app:left_name="@string/edu" />
 
-        <com.bb.taold.widget.Line_ItemView
-            android:paddingRight="15dp"
-            android:id="@+id/tv_company_address"
-            app:left_name="@string/company_address"
-            app:hint="@string/company_address_hint"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+                <include layout="@layout/line_e" />
 
-
-    </LinearLayout>
+                <com.bb.taold.widget.Line_ItemView
+                    android:id="@+id/item_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="15dp"
+                    app:hint="@string/address_hint"
+                    app:left_name="@string/address" />
 
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:paddingLeft="15dp">
+
+                <com.bb.taold.widget.Line_ItemView
+                    android:id="@+id/li_company_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="15dp"
+                    app:hint="@string/company_name_hint"
+                    app:left_name="@string/company_name" />
+
+                <include layout="@layout/line_e" />
+
+                <com.bb.taold.widget.Line_ItemView
+                    android:id="@+id/li_company_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="15dp"
+                    app:hint="@string/company_address_hint"
+                    app:left_name="@string/company_address" />
+
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="3dp"
+                android:text="@string/contact_info"
+                android:textAppearance="@style/TextAppear.Theme.111111_Size14" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:paddingLeft="15dp">
+
+                <com.bb.taold.widget.Line_ItemView
+                    android:id="@+id/li_tel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="15dp"
+                    app:hint="@string/pleaseselect"
+                    app:left_name="@string/phone" />
+
+                <include layout="@layout/line_e" />
+
+                <com.bb.taold.widget.Line_ItemView
+                    android:id="@+id/li_realname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="15dp"
+                    app:hint="@string/pleasereal_name"
+                    app:left_name="@string/real_name" />
+
+                <com.bb.taold.widget.Line_ItemView
+                    android:id="@+id/li_relship"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="15dp"
+                    app:hint="@string/pleaseselect"
+                    app:left_name="@string/rela" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:paddingLeft="15dp">
+
+                <com.bb.taold.widget.Line_ItemView
+                    android:id="@+id/li_tel2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="15dp"
+                    app:hint="@string/pleaseselect"
+                    app:left_name="@string/phone" />
+
+                <include layout="@layout/line_e" />
+
+                <com.bb.taold.widget.Line_ItemView
+                    android:id="@+id/li_realname2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="15dp"
+                    app:hint="@string/pleasereal_name"
+                    app:left_name="@string/real_name" />
+
+                <com.bb.taold.widget.Line_ItemView
+                    android:id="@+id/li_relship2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="15dp"
+                    app:hint="@string/pleaseselect"
+                    app:left_name="@string/rela" />
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_marginBottom="15dp"
+                android:id="@+id/tv_confirm"
+                android:layout_width="fill_parent"
+                android:layout_height="42dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="25dp"
+                android:textSize="16sp"
+                android:textColor="#FEFEFE"
+                android:gravity="center"
+                android:text="@string/submit"
+                android:background="@drawable/bg_loan_button"/>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
 
